--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		<input name="country" type="text" class="js_country">
 	</div>
     <!-- Get JS -->
-	<script src="dist/js/countries.js"></script>
-	<script src="dist/js/country-data.js"></script>
+	<script src="src/js/countries.js"></script>
+	<script src="src/js/country-data.js"></script>
 
 <script>
 	var el = document.getElementsByClassName("js_country")[0];
@@ -24,7 +24,6 @@
         	console.log(v);
         }
     }
-
 	// $(document).ready(function() {
 	// 	$('.js_country').COUNTRY_Data(options);
 	// });
